--- a/index.html
+++ b/index.html
@@ -2,10 +2,87 @@
 <!-- Sample Site: https://content.codecademy.com/PRO/independent-practice-projects/flexbox-business-site/example-site/index.html -->
 <html>
   <head>
+    <title>VC Enterprise Portfolio</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles.css">
   </head>
-
   <body>
-    
+    <header>
+      <h1>The VC Experience</h1>
+      <nav>
+        <p><a href="#mission">Mission Statement</a></p>
+        <p><a href="#portfolio">Portfolio</a></p>
+        <p><a href="#team">Investment Team</a></p>
+        <p><a href="#contact">Contact Us</a></p>
+      </nav>
+    </header>
+    <main>
+      <section id="mission">
+        <div class="content">
+          <h2>The VC Experience</h2>
+          <h4>Our fund is committed to the furthering entrepreneurs in the mobility sector.</h4>
+        </div>
+      </section>
+      <section id="portfolio">
+        <div class="content">
+          <h2>Our Mobility Portfolio</h2>
+          <h4>Impacting diverse sectors of mobility to better the human experience and the world we inhabit</h4>
+          <div class="facilities">
+            <div class="facility">
+              <img src="./images/workspace.jpg" alt="Work Space" width="250px" height="150px">
+              <span>Workspace</span>
+            </div>
+            <div class="facility">
+              <img src="./images/workdesk.jpg" alt="Work Desk" width="250px" height="150px">
+              <span>Work Desk</span>
+            </div>
+            <div class="facility">
+              <img src="./images/collaboration.jpg" alt="Collaboration" width="250px" height="150px">
+              <span>Collaboration</span>
+            </div>
+            <div class="facility">
+              <img src="./images/meetings.jpg" alt="Meetings" width="250px" height="150px">
+              <span>Meetings</span>
+            </div>
+            <div class="facility">
+              <img src="./images/planning.jpg" alt="Planning" width="250px" height="150px">
+              <span>Planning</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="team">
+        <div class="content">
+          <h2>Our Team</h2>
+          <div class="team">
+            <div class="team-member">
+              <img src="./images/oswald.jpg" alt="Oswald" width="250px" height="350px">
+              <h4>Oswald</h4>
+              <p>C.E.O. - Founder and Principal Investor</p>
+            </div>
+            <div class="team-member">
+              <img src="./images/tweety.jpg" alt="Tweety" width="250px" height="350px">
+              <h4>Oswald</h4>
+              <p>Partner - Research & Development</p>
+            </div>
+            <div class="team-member">
+              <img src="./images/bugsbunny.jpg" alt="Bugs Bunny" width="250px" height="350px">
+              <h4>Oswald</h4>
+              <p>Partner - Partnerships & Marketing</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="contact">
+        <div class="content">
+          <h2>The VC Experience</h2>
+          <h5>introduction@vcexperience.investors</h5>
+          <h5>555-867-5309</h5>
+          <div class="copyright">
+            <h5>copyright VC Enterprises 2020</h5>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
